Bug 1538236 - fix LTO issues with arm xptcstubs; r=mccr8 a=pascalc

ARM's xptcstubs use a slightly different setup for PrepareAndDispatch
than...well, all of our other stubs.  This difference appears to be
causing problems with LTO builds.  Change the setup to be more like our
other stubs, which additionally gets rid of some of the `asm` nonsense.

Differential Revision: https://phabricator.services.mozilla.com/D26243

--HG--
extra : source : 576f9e652a20cc885e258cdcebd2a1a275afa714